--- a/src/content/docs/guides/getting-started/umd.mdx
+++ b/src/content/docs/guides/getting-started/umd.mdx
@@ -1,115 +1,227 @@
 ---
 title: Using UMD
 sidebar:
-  order: 2
+  order: 1
 ---
+
+Univer provides a UMD package for each plugin. Based on the plugin design, these trivial UMD packages will give developers a lot of flexibility, but they will also face some new challenges:
+
+- How do I determine the pre-dependencies of a package?
+- How do I determine the correct import order?
+- How do I determine which packages provide a feature?
+
+If you don't have a very clear understanding of Univer's plugin mechanism, these problems usually mean countless attempts at permutation and combination.
+
+If you do encounter such problems, the [UMD package generation tool](#umd-package-generation-tool) we provide below will help you solve these problems. Of course, if you already have a clear understanding of Univer's plugin mechanism, you can skip this tool and [use CDN to import](#using-cdn-to-import-umd) these UMD packages directly.
+
+## UMD Package Generation Tool
+
+The UMD package generation tool is an online tool that can help you generate a UMD package that meets your needs. You only need to answer some questions according to our prompts to get the corresponding UMD package.
 
 import UMDGenerator from './_components/UMDGenerator'
 
 <UMDGenerator client:only />
 
-You can also using Univer via UMD. We provide an online example in [Playground](https://univer.ai/playground/?title=UMD).
-
-## Using CDN to import UMD
-
-```html title="index.html"
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Univer</title>
-    <style>
-      html,
-      body,
-      #app {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
-
-    <link rel="stylesheet" href="https://unpkg.com/@univerjs/design/lib/index.css" />
-    <link rel="stylesheet" href="https://unpkg.com/@univerjs/ui/lib/index.css" />
-    <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-ui/lib/index.css" />
-    <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-formula/lib/index.css" />
-    <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-numfmt/lib/index.css" />
-
-    <script src="https://unpkg.com/clsx@2.0.0/dist/clsx.min.js"></script>
-    <script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
-    <script src="https://unpkg.com/rxjs@7.8.1/dist/bundles/rxjs.umd.min.js"></script>
-    <script src="https://unpkg.com/@wendellhu/redi@0.12.13/dist/redi.js"></script>
-    <script src="https://unpkg.com/@wendellhu/redi@0.12.13/dist/react-bindings.js"></script>
-
-    <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/engine-formula/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/sheets/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/docs-ui/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/sheets-ui/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/sheets-formula/lib/umd/index.js"></script>
-    <script src="https://unpkg.com/@univerjs/sheets-numfmt/lib/umd/index.js"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-
-    <script>
-      // univer
-      var univer = new window.UniverCore.Univer({
-        theme: window.UniverDesign.defaultTheme,
-        locale: window.UniverCore.LocaleType.ZH_CN,
-        logLevel: window.UniverCore.LogLevel.VERBOSE,
-      });
-
-      // core plugins
-      univer.registerPlugin(window.UniverDocs.UniverDocsPlugin, {
-        hasScroll: false,
-      });
-      univer.registerPlugin(window.UniverDocsUi.UniverDocsUIPlugin);
-      univer.registerPlugin(window.UniverEngineRender.UniverRenderEnginePlugin);
-      univer.registerPlugin(window.UniverUi.UniverUIPlugin, {
-        container: "app",
-        header: true,
-        toolbar: true,
-        footer: true,
-      });
-      univer.registerPlugin(window.UniverSheets.UniverSheetsPlugin);
-      univer.registerPlugin(window.UniverSheetsUi.UniverSheetsUIPlugin);
-
-      // sheet feature plugins
-      univer.registerPlugin(window.UniverSheetsNumfmt.UniverSheetsNumfmtPlugin);
-      univer.registerPlugin(window.UniverEngineFormula.UniverFormulaEnginePlugin);
-      univer.registerPlugin(window.UniverSheetsFormula.UniverSheetsFormulaPlugin);
-
-      // create univer sheet instance
-      univer.createUniverSheet({});
-    </script>
-  </body>
-</html>
-```
-
-## Using `@univerjs/create-cli` to build UMD package
-
-You can also use our command line tool [`@univerjs/create-cli`](https://github.com/dream-num/cli) to build a UMD package that meets your needs locally.
-
-As the command line prompts, choose whether to exclude some unnecessary dependencies, and you will get css and js files that support UMD.
+After that, all you have to do is copy the generated code into your project and import it in the right place to start using Univer.
 
 import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 <Tabs>
-  <TabItem label="npm">
-    ```shell
-      npm create @univerjs/cli@latest
+  <TabItem label="Univer Sheet">
+    ```html title="index.html"
+      <!DOCTYPE html>
+      <html lang="en">
+        <head>
+          <!-- ... -->
+          <link rel="stylesheet" href="/path/main.css" />
+          <script src="/path/main.js"></script>
+
+          <style>
+            #app {
+              height: 480px;
+            }
+          </style>
+        </head>
+        <body>
+          <div id="app"></div>
+
+          <script>
+            var { 
+              UniverCore,
+              UniverDesign,
+              UniverEngineRender,
+              UniverEngineFormula,
+              UniverDocs,
+              UniverDocsUi,
+              UniverUi,
+              UniverSheets,
+              UniverSheetsUi,
+              UniverSheetsNumfmt,
+              UniverSheetsFormula,
+              UniverFacade,
+            } = window
+
+            var univer = new UniverCore.Univer({
+              theme: UniverDesign.defaultTheme,
+              locale: UniverCore.LocaleType.ZH_CN,
+              logLevel: UniverCore.LogLevel.VERBOSE,
+            });
+
+            univer.registerPlugin(UniverEngineRender.UniverRenderEnginePlugin);
+            univer.registerPlugin(UniverEngineFormula.UniverFormulaEnginePlugin);
+
+            univer.registerPlugin(UniverUi.UniverUIPlugin, {
+              container: "app",
+              header: true,
+              toolbar: true,
+              footer: true,
+            });
+
+            univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
+              hasScroll: false,
+            });
+            univer.registerPlugin(UniverDocsUi.UniverDocsUIPlugin);
+
+            univer.registerPlugin(UniverSheets.UniverSheetsPlugin);
+            univer.registerPlugin(UniverSheetsUi.UniverSheetsUIPlugin);
+            univer.registerPlugin(UniverSheetsNumfmt.UniverSheetsNumfmtPlugin);
+            univer.registerPlugin(UniverSheetsFormula.UniverSheetsFormulaPlugin);
+
+            univer.createUniverSheet({});
+
+            const univerAPI = UniverFacade.FUniver.newAPI(univer)
+          </script>
+        </body>
+      </html>
     ```
   </TabItem>
-  <TabItem label="pnpm">
-    ```shell
-      pnpm create @univerjs/cli@latest
+  <TabItem label="Univer Doc">
+    ```html title="index.html"
+      <!DOCTYPE html>
+      <html lang="en">
+        <head>
+          <!-- ... -->
+          <link rel="stylesheet" href="/path/main.css" />
+          <script src="/path/main.js"></script>
+
+          <style>
+            #app {
+              height: 480px;
+            }
+          </style>
+        </head>
+        <body>
+          <div id="app"></div>
+
+          <script>
+            var { 
+              UniverCore,
+              UniverDesign,
+              UniverEngineRender,
+              UniverEngineFormula,
+              UniverDocs,
+              UniverDocsUi,
+              UniverUi,
+              UniverFacade,
+            } = window
+
+            var univer = new UniverCore.Univer({
+              theme: UniverDesign.defaultTheme,
+              locale: UniverCore.LocaleType.ZH_CN,
+              logLevel: UniverCore.LogLevel.VERBOSE,
+            });
+
+            univer.registerPlugin(UniverEngineRender.UniverRenderEnginePlugin);
+            univer.registerPlugin(UniverEngineFormula.UniverFormulaEnginePlugin);
+
+            univer.registerPlugin(UniverUi.UniverUIPlugin, {
+              container: "app",
+              header: true,
+              toolbar: true,
+            });
+
+            univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
+              standalone: true,
+            });
+            univer.registerPlugin(UniverDocsUi.UniverDocsUIPlugin, {
+              container: 'univerdoc',
+              layout: {
+                docContainerConfig: {
+                  innerLeft: false,
+                },
+              },
+            });
+
+            univer.createUniverDoc({});
+
+            const univerAPI = UniverFacade.FUniver.newAPI(univer)
+          </script>
+        </body>
+      </html>
+    ```
+  </TabItem>
+</Tabs>
+
+## Using CDN to import UMD
+
+Univer can also be imported through UMD. It should be noted that Univer's plugin mechanism has strict dependency relationships, so special attention should be paid to the order of import.
+
+<Tabs>
+  <TabItem label="Univer Sheet">
+    ```html title="index.html"
+      <head>
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs/design/lib/index.css" />
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs/ui/lib/index.css" />
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs/docs-ui/lib/index.css" />
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-ui/lib/index.css" />
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-formula/lib/index.css" />
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-numfmt/lib/index.css" />
+
+        <script src="https://unpkg.com/clsx/dist/clsx.min.js"></script>
+        <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
+        <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
+        <script src="https://unpkg.com/rxjs/dist/bundles/rxjs.umd.min.js"></script>
+        <script src="https://unpkg.com/@wendellhu/redi/dist/redi.js"></script>
+        <script src="https://unpkg.com/@wendellhu/redi/dist/react-bindings.js"></script>
+
+        <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/engine-formula/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/docs-ui/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/sheets/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/sheets-ui/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/sheets-formula/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/sheets-numfmt/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/facade/lib/umd/index.js"></script>
+      </head>
+    ```
+  </TabItem>
+  <TabItem label="Univer Doc">
+    ```html title="index.html"
+      <head>
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs/design/lib/index.css" />
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs/ui/lib/index.css" />
+        <link rel="stylesheet" href="https://unpkg.com/@univerjs/docs-ui/lib/index.css" />
+
+        <script src="https://unpkg.com/clsx/dist/clsx.min.js"></script>
+        <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
+        <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
+        <script src="https://unpkg.com/rxjs/dist/bundles/rxjs.umd.min.js"></script>
+        <script src="https://unpkg.com/@wendellhu/redi/dist/redi.js"></script>
+        <script src="https://unpkg.com/@wendellhu/redi/dist/react-bindings.js"></script>
+
+        <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/engine-formula/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/docs-ui/lib/umd/index.js"></script>
+        <script src="https://unpkg.com/@univerjs/facade/lib/umd/index.js"></script>
+      </head>
     ```
   </TabItem>
 </Tabs>
