feat: add docker compose s3 config doc

--- a/src/content/docs/enterprises/trial-version.mdx
+++ b/src/content/docs/enterprises/trial-version.mdx
@@ -115,6 +115,7 @@ Port Usage
         | service | port | description |
         | --------- | ---- | --------------- |
         | universer | 8000 | api http server |
+        | univer-minio | 9000 | s3 server |
         | univer-client | 3010 | frontend |
     </TabItem>
     <TabItem label="lite">
@@ -155,5 +156,13 @@ Port Usage
         ```
     </TabItem>
 </Tabs>
+
+### 7. S3 config for docker compose
+Replace localhost with the local IP for `S3_ENDPOINT_PUBLIC` config in .env file, it make people can use `Download as` in local area network.
+
+```bash
+# Example: S3_ENDPOINT_PUBLIC=http://127.0.0.1:9000
+# Replace to: S3_ENDPOINT_PUBLIC=http://192.168.50.172:9000
+```
 
 If you are still unable to resolve your issue, [contact the community](/guides/introduction#Community) for assistance.
