--- a/src/content/docs/zh-cn/guides/introduction/roadmap.mdx
+++ b/src/content/docs/zh-cn/guides/introduction/roadmap.mdx
@@ -84,6 +84,31 @@ export const docData = [
     name: '核心功能',
   },
   {
+    start: '2024/02',
+    end: '2024/03',
+    name: '多人协同',
+  },
+  {
+    start: '2024/04',
+    end: '2024/05',
+    name: '超链接',
+  },
+  {
+    start: '2024/04',
+    end: '2024/05',
+    name: '清除格式',
+  },
+  {
+    start: '2024/04',
+    end: '2024/05',
+    name: '格式刷',
+  },
+  {
+    start: '2024/04',
+    end: '2024/05',
+    name: '任务列表',
+  },
+  {
     start: '2024/05',
     end: '2024/12',
     name: '其他功能',
