--- a/src/content/docs/guides/getting-started/umd.mdx
+++ b/src/content/docs/guides/getting-started/umd.mdx
@@ -27,137 +27,135 @@ After that, all you have to do is copy the generated code into your project and 
 import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 <Tabs>
-  <TabItem label="Univer Sheet">
+  <TabItem label="📊 Univer Sheet">
     ```html title="index.html"
-      <!DOCTYPE html>
-      <html lang="en">
-        <head>
-          <!-- ... -->
-          <link rel="stylesheet" href="/path/main.css" />
-          <script src="/path/main.js"></script>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <!-- ... -->
+        <link rel="stylesheet" href="/path/main.css" />
+        <script src="/path/main.js"></script>
 
-          <style>
-            #app {
-              height: 480px;
-            }
-          </style>
-        </head>
-        <body>
-          <div id="app"></div>
+        <style>
+          #app {
+            height: 480px;
+          }
+        </style>
+      </head>
+      <body>
+        <div id="app"></div>
 
-          <script>
-            var { 
-              UniverCore,
-              UniverDesign,
-              UniverEngineRender,
-              UniverEngineFormula,
-              UniverDocs,
-              UniverDocsUi,
-              UniverUi,
-              UniverSheets,
-              UniverSheetsUi,
-              UniverSheetsNumfmt,
-              UniverSheetsFormula,
-              UniverFacade,
-            } = window
+        <script>
+          var { 
+            UniverCore,
+            UniverDesign,
+            UniverEngineRender,
+            UniverEngineFormula,
+            UniverDocs,
+            UniverDocsUi,
+            UniverUi,
+            UniverSheets,
+            UniverSheetsUi,
+            UniverSheetsNumfmt,
+            UniverSheetsFormula,
+            UniverFacade,
+          } = window
 
-            var univer = new UniverCore.Univer({
-              theme: UniverDesign.defaultTheme,
-              locale: UniverCore.LocaleType.ZH_CN,
-              logLevel: UniverCore.LogLevel.VERBOSE,
-            });
+          var univer = new UniverCore.Univer({
+            theme: UniverDesign.defaultTheme,
+            locale: UniverCore.LocaleType.ZH_CN,
+            logLevel: UniverCore.LogLevel.VERBOSE,
+          });
 
-            univer.registerPlugin(UniverEngineRender.UniverRenderEnginePlugin);
-            univer.registerPlugin(UniverEngineFormula.UniverFormulaEnginePlugin);
+          univer.registerPlugin(UniverEngineRender.UniverRenderEnginePlugin);
+          univer.registerPlugin(UniverEngineFormula.UniverFormulaEnginePlugin);
 
-            univer.registerPlugin(UniverUi.UniverUIPlugin, {
-              container: "app",
-              header: true,
-              toolbar: true,
-              footer: true,
-            });
+          univer.registerPlugin(UniverUi.UniverUIPlugin, {
+            container: "app",
+            header: true,
+            footer: true,
+          });
 
-            univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
-              hasScroll: false,
-            });
-            univer.registerPlugin(UniverDocsUi.UniverDocsUIPlugin);
+          univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
+            hasScroll: false,
+          });
+          univer.registerPlugin(UniverDocsUi.UniverDocsUIPlugin);
 
-            univer.registerPlugin(UniverSheets.UniverSheetsPlugin);
-            univer.registerPlugin(UniverSheetsUi.UniverSheetsUIPlugin);
-            univer.registerPlugin(UniverSheetsNumfmt.UniverSheetsNumfmtPlugin);
-            univer.registerPlugin(UniverSheetsFormula.UniverSheetsFormulaPlugin);
+          univer.registerPlugin(UniverSheets.UniverSheetsPlugin);
+          univer.registerPlugin(UniverSheetsUi.UniverSheetsUIPlugin);
+          univer.registerPlugin(UniverSheetsNumfmt.UniverSheetsNumfmtPlugin);
+          univer.registerPlugin(UniverSheetsFormula.UniverSheetsFormulaPlugin);
 
-            univer.createUniverSheet({});
+          univer.createUniverSheet({});
 
-            const univerAPI = UniverFacade.FUniver.newAPI(univer)
-          </script>
-        </body>
-      </html>
+          const univerAPI = UniverFacade.FUniver.newAPI(univer)
+        </script>
+      </body>
+    </html>
     ```
   </TabItem>
-  <TabItem label="Univer Doc">
+  <TabItem label="📝 Univer Doc">
     ```html title="index.html"
-      <!DOCTYPE html>
-      <html lang="en">
-        <head>
-          <!-- ... -->
-          <link rel="stylesheet" href="/path/main.css" />
-          <script src="/path/main.js"></script>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <!-- ... -->
+        <link rel="stylesheet" href="/path/main.css" />
+        <script src="/path/main.js"></script>
 
-          <style>
-            #app {
-              height: 480px;
-            }
-          </style>
-        </head>
-        <body>
-          <div id="app"></div>
+        <style>
+          #app {
+            height: 480px;
+          }
+        </style>
+      </head>
+      <body>
+        <div id="app"></div>
 
-          <script>
-            var { 
-              UniverCore,
-              UniverDesign,
-              UniverEngineRender,
-              UniverEngineFormula,
-              UniverDocs,
-              UniverDocsUi,
-              UniverUi,
-              UniverFacade,
-            } = window
+        <script>
+          var { 
+            UniverCore,
+            UniverDesign,
+            UniverEngineRender,
+            UniverEngineFormula,
+            UniverDocs,
+            UniverDocsUi,
+            UniverUi,
+            UniverFacade,
+          } = window
 
-            var univer = new UniverCore.Univer({
-              theme: UniverDesign.defaultTheme,
-              locale: UniverCore.LocaleType.ZH_CN,
-              logLevel: UniverCore.LogLevel.VERBOSE,
-            });
+          var univer = new UniverCore.Univer({
+            theme: UniverDesign.defaultTheme,
+            locale: UniverCore.LocaleType.ZH_CN,
+            logLevel: UniverCore.LogLevel.VERBOSE,
+          });
 
-            univer.registerPlugin(UniverEngineRender.UniverRenderEnginePlugin);
-            univer.registerPlugin(UniverEngineFormula.UniverFormulaEnginePlugin);
+          univer.registerPlugin(UniverEngineRender.UniverRenderEnginePlugin);
+          univer.registerPlugin(UniverEngineFormula.UniverFormulaEnginePlugin);
 
-            univer.registerPlugin(UniverUi.UniverUIPlugin, {
-              container: "app",
-              header: true,
-              toolbar: true,
-            });
+          univer.registerPlugin(UniverUi.UniverUIPlugin, {
+            container: "app",
+            header: true,
+          });
 
-            univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
-              standalone: true,
-            });
-            univer.registerPlugin(UniverDocsUi.UniverDocsUIPlugin, {
-              container: 'univerdoc',
-              layout: {
-                docContainerConfig: {
-                  innerLeft: false,
-                },
+          univer.registerPlugin(UniverDocs.UniverDocsPlugin, {
+            standalone: true,
+          });
+          univer.registerPlugin(UniverDocsUi.UniverDocsUIPlugin, {
+            container: 'univerdoc',
+            layout: {
+              docContainerConfig: {
+                innerLeft: false,
               },
-            });
+            },
+          });
 
-            univer.createUniverDoc({});
+          univer.createUniverDoc({});
 
-            const univerAPI = UniverFacade.FUniver.newAPI(univer)
-          </script>
-        </body>
-      </html>
+          const univerAPI = UniverFacade.FUniver.newAPI(univer)
+        </script>
+      </body>
+    </html>
     ```
   </TabItem>
 </Tabs>
@@ -167,61 +165,61 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 Univer can also be imported through UMD. It should be noted that Univer's plugin mechanism has strict dependency relationships, so special attention should be paid to the order of import.
 
 <Tabs>
-  <TabItem label="Univer Sheet">
+  <TabItem label="📊 Univer Sheet">
     ```html title="index.html"
-      <head>
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs/design/lib/index.css" />
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs/ui/lib/index.css" />
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs/docs-ui/lib/index.css" />
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-ui/lib/index.css" />
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-formula/lib/index.css" />
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-numfmt/lib/index.css" />
+    <head>
+      <link rel="stylesheet" href="https://unpkg.com/@univerjs/design/lib/index.css" />
+      <link rel="stylesheet" href="https://unpkg.com/@univerjs/ui/lib/index.css" />
+      <link rel="stylesheet" href="https://unpkg.com/@univerjs/docs-ui/lib/index.css" />
+      <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-ui/lib/index.css" />
+      <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-formula/lib/index.css" />
+      <link rel="stylesheet" href="https://unpkg.com/@univerjs/sheets-numfmt/lib/index.css" />
 
-        <script src="https://unpkg.com/clsx/dist/clsx.min.js"></script>
-        <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
-        <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
-        <script src="https://unpkg.com/rxjs/dist/bundles/rxjs.umd.min.js"></script>
-        <script src="https://unpkg.com/@wendellhu/redi/dist/redi.js"></script>
-        <script src="https://unpkg.com/@wendellhu/redi/dist/react-bindings.js"></script>
+      <script src="https://unpkg.com/clsx/dist/clsx.min.js"></script>
+      <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
+      <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
+      <script src="https://unpkg.com/rxjs/dist/bundles/rxjs.umd.min.js"></script>
+      <script src="https://unpkg.com/@wendellhu/redi/dist/redi.js"></script>
+      <script src="https://unpkg.com/@wendellhu/redi/dist/react-bindings.js"></script>
 
-        <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/engine-formula/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/docs-ui/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/sheets/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/sheets-ui/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/sheets-formula/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/sheets-numfmt/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/facade/lib/umd/index.js"></script>
-      </head>
+      <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/engine-formula/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/docs-ui/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/sheets/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/sheets-ui/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/sheets-formula/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/sheets-numfmt/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/facade/lib/umd/index.js"></script>
+    </head>
     ```
   </TabItem>
-  <TabItem label="Univer Doc">
+  <TabItem label="📝 Univer Doc">
     ```html title="index.html"
-      <head>
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs/design/lib/index.css" />
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs/ui/lib/index.css" />
-        <link rel="stylesheet" href="https://unpkg.com/@univerjs/docs-ui/lib/index.css" />
+    <head>
+      <link rel="stylesheet" href="https://unpkg.com/@univerjs/design/lib/index.css" />
+      <link rel="stylesheet" href="https://unpkg.com/@univerjs/ui/lib/index.css" />
+      <link rel="stylesheet" href="https://unpkg.com/@univerjs/docs-ui/lib/index.css" />
 
-        <script src="https://unpkg.com/clsx/dist/clsx.min.js"></script>
-        <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
-        <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
-        <script src="https://unpkg.com/rxjs/dist/bundles/rxjs.umd.min.js"></script>
-        <script src="https://unpkg.com/@wendellhu/redi/dist/redi.js"></script>
-        <script src="https://unpkg.com/@wendellhu/redi/dist/react-bindings.js"></script>
+      <script src="https://unpkg.com/clsx/dist/clsx.min.js"></script>
+      <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
+      <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
+      <script src="https://unpkg.com/rxjs/dist/bundles/rxjs.umd.min.js"></script>
+      <script src="https://unpkg.com/@wendellhu/redi/dist/redi.js"></script>
+      <script src="https://unpkg.com/@wendellhu/redi/dist/react-bindings.js"></script>
 
-        <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/engine-formula/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/docs-ui/lib/umd/index.js"></script>
-        <script src="https://unpkg.com/@univerjs/facade/lib/umd/index.js"></script>
-      </head>
+      <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/engine-formula/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/docs-ui/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/facade/lib/umd/index.js"></script>
+    </head>
     ```
   </TabItem>
 </Tabs>
