--- a/src/content/docs/guides/introduction/roadmap.mdx
+++ b/src/content/docs/guides/introduction/roadmap.mdx
@@ -80,8 +80,33 @@ export const sheetData = [
 export const docData = [
   {
     start: '2024/01',
-    end: '2024/04',
+    end: '2024/03',
     name: 'Main Features',
+  },
+  {
+    start: '2024/02',
+    end: '2024/03',
+    name: 'Collaboration',
+  },
+  {
+    start: '2024/04',
+    end: '2024/05',
+    name: 'Hyperlinks',
+  },
+  {
+    start: '2024/04',
+    end: '2024/05',
+    name: 'Clear formatting',
+  },
+  {
+    start: '2024/04',
+    end: '2024/05',
+    name: 'Format Painter',
+  },
+  {
+    start: '2024/04',
+    end: '2024/05',
+    name: 'Checklists',
   },
   {
     start: '2024/05',
