--- a/src/content/docs/guides/introduction/index.mdx
+++ b/src/content/docs/guides/introduction/index.mdx
@@ -65,6 +65,36 @@ import FeatureBox from './_components/FeatureBox.astro'
 
 > Univer Sheet has completed most of the development of basic features, but there are still key features that have not been fully implemented. Please follow our [Roadmap](/guides/introduction/roadmap) to stay updated on our progress.
 
+#### Showcases
+
+import Sandbox from '@/components/Sandbox'
+
+export const code = `const univer = new Univer({
+  theme: defaultTheme,
+});
+
+univer.registerPlugin(UniverRenderEnginePlugin);
+univer.registerPlugin(UniverFormulaEnginePlugin);
+univer.registerPlugin(UniverUIPlugin, {
+  container: 'app',
+  header: true,
+  footer: true,
+});
+
+univer.registerPlugin(UniverDocsPlugin, {
+  hasScroll: false,
+});
+univer.registerPlugin(UniverDocsUIPlugin);
+
+univer.registerPlugin(UniverSheetsPlugin);
+univer.registerPlugin(UniverSheetsUIPlugin);
+univer.registerPlugin(UniverSheetsFormulaPlugin);
+
+univer.createUniverSheet({});
+`
+
+<Sandbox client:only="react" src="/sandbox" code={code} hideEditor />
+
 #### Editing Operations
 
 - Create, delete, and move sheets
