--- a/src/content/docs/zh-cn/guides/quickstart/index.mdx
+++ b/src/content/docs/zh-cn/guides/quickstart/index.mdx
@@ -4,61 +4,74 @@ title: 快速上手
 
 如果你想尽快开始体验 Univer，那么你来对地方了！这个页面将带你在几分钟内从零搭建一个可以运行的 Univer 应用。
 
-Univer Sheet / Univer Doc
-
-## 60 秒构建 Univer 应用
+{/* ## 60 秒构建 Univer 应用 */}
 
 {/* 这里需要一个视频 */}
 
 ## 在线体验
 
-Univer Sheet
-https://stackblitz.com/~/github.com/awesome-univer/sheets-vite-demo
+你可以在线体验 Univer，无需安装任何东西。只需点击下面的链接，即可立即开始使用 Univer。
 
-Univer Doc
-https://stackblitz.com/~/github.com/awesome-univer/docs-vite-demo
+import PlaygroundBtns from '../../../guides/quickstart/_components/PlaygroundBtns.astro'
 
-## Vite 模板
+<PlaygroundBtns
+  items={[{
+    color: 'rgb(73, 184, 17)',
+    icon: '📊',
+    title: 'Univer Sheet',
+    href: 'https://stackblitz.com/~/github.com/awesome-univer/sheets-vite-demo',
+  }, {
+    color: 'rgb(11, 158, 251)',
+    icon: '📝',
+    title: 'Univer Doc',
+    href: 'https://stackblitz.com/~/github.com/awesome-univer/docs-vite-demo',
+    type: 'beta'
+  }, {
+    color: 'rgb(254, 75, 75)',
+    icon: '🎨',
+    title: 'Univer Slide',
+    type: 'dev',
+  }]}
+/>
+
+## 从模板创建
+
+如果你想在本地搭建 Univer 应用，可以使用以下命令从模板创建一个新的 Univer 应用。我们提供了两个模板，分别用于创建 Univer Sheet 应用和 Univer Doc 应用。
+
+import { Tabs, TabItem } from "@astrojs/starlight/components";
+
+<Tabs>
+  <TabItem label="npm">
+    ```shell
+      # 📊 create a univer sheet app
+      npx degit dream-num/univer-sheet-start-kit [your-app-name]
+
+      # 📝 create a univer doc app
+      npx degit dream-num/univer-doc-start-kit [your-app-name]
+    ```
+  </TabItem>
+  <TabItem label="pnpm">
+    ```shell
+      # 📊 create a univer sheet app
+      pnpm dlx degit dream-num/univer-sheet-start-kit [your-app-name]
+
+      # 📝 create a univer doc app
+      pnpm dlx degit dream-num/univer-doc-start-kit [your-app-name]
+    ```
+  </TabItem>
+</Tabs>
+
+至此，你已经成功创建了属于你的第一个 Univer 项目，并且体验了 Univer 的一些功能。
 
 ## 下一步
 
-import Sandbox from '@/components/Sandbox'
+恭喜你！你已经迈出了第一步，开始了解 Univer。接下来，你可以继续深入学习 Univer，这里有一些建议：
 
-export const code = `function UniverSheet () {
-  const univerRef = useRef(null);
+- **🔰 新手入门**：如果你想学习如何从头开始手动创建一个 Univer 项目，请查看[新手入门](/zh-cn/guides/getting-started)章节。它将一步步引导你完成整个过程。
+- **🏗️ 进阶使用**：如果你想进一步提升你的 Univer 技能，可以查看[进阶使用](/zh-cn/guides/advanced-use)章节。它涵盖了更多高级主题和技巧。
+- **📚 教程**：如果你想了解一些实际的例子和真实的用例，可以查看[教程](/zh-cn/guides/tutorials)章节，里面有一些实用的教程，可以帮助你学习如何使用 Univer 构建各种应用和功能。
+- **🧱 概念与架构**：如果你想深入了解 Univer 的内部工作原理，可以查看 [概念与架构](/zh-cn/guides/concepts-and-architecture/architecture/) 章节，它提供了 Univer 的架构、核心概念和设计原则的全面概述。
+- **🪄 扩展 Univer**：希望扩展和自定义 Univer 以满足你的特定需求？[扩展 Univer](/zh-cn/guides/customization) 章节是你学习如何创建自定义插件、主题和扩展的首选。
+- **🎢 在线演示**： 别忘了探索[在线演示](/playground)页面，在那里你可以尝试各种 Univer 演示，看到这个库的实际运行。
 
-  useEffect(() => {
-    const univer = new Univer({
-      theme: defaultTheme,
-    });
-
-    // core plugins
-    univer.registerPlugin(UniverRenderEnginePlugin);
-    univer.registerPlugin(UniverFormulaEnginePlugin);
-    univer.registerPlugin(UniverUIPlugin, {
-      container: univerRef.current,
-      header: true,
-      toolbar: true,
-      footer: true,
-    });
-
-    // doc plugins
-    univer.registerPlugin(UniverDocsPlugin, {
-      hasScroll: false,
-    });
-    univer.registerPlugin(UniverDocsUIPlugin);
-
-    // sheet plugins
-    univer.registerPlugin(UniverSheetsPlugin);
-    univer.registerPlugin(UniverSheetsUIPlugin);
-    univer.registerPlugin(UniverSheetsFormulaPlugin);
-
-    univer.createUniverSheet({});
-  }, []);
-
-  return (
-    <div ref={univerRef} style={{ height: '400px' }} />
-  )
-}`
-
-<Sandbox client:only="react" src="/sandbox" code={code} hideEditor />
+无论你选择哪条道路，Univer 都会在你的每一步旅程中支持你。祝你开发愉快！
